--- a/Sources/Map/index.html
+++ b/Sources/Map/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>My map</title>
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
 					integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
 					crossorigin=""/>
@@ -12,7 +13,7 @@
 	</head>
 	<body>
 		<div id="mapid"></div>
-		<script type="text/javascript" src="country_data.js"></script>
+		<script type="text/javascript" src="coordinates.js"></script>
 		<script>
 			var mymap = L.map('mapid').setView([0, 0], 2);
 			L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw',
@@ -22,19 +23,34 @@
 				maxZoom: 4,
 			}).addTo(mymap);
 
-			function style(feature) {
-			    return {
-			        fillColor: '#FFEDA0',
-			        weight: 2,
-			        opacity: 1,
-			        color: 'white',
-			        dashArray: '3',
-			        fillOpacity: 0.7
-			    };
+			function onEachFeature(feature, layer) {
+				if (feature.properties && feature.properties) {
+					layer.bindPopup(feature.properties.name + " " + feature.properties.description);
+				}
 			}
 
+			function getColor(d) {
+			    return d == 1  ? '#f1eef6' :
+			           d == 2  ? '#d0d1e6' :
+			           d == 3  ? '#a6bddb' :
+			           d == 4  ? '#74a9cf' :
+			           d == 5  ? '#2b8cbe' :
+								 					 '#045a8d'
+			}
 
-			L.geoJson(countryData, {style: style}).addTo(mymap);
+			function pointToLayer(feature, latlng) {
+				return L.circleMarker(latlng, {
+					radius: 6,
+					fillColor: getColor(feature.properties.valueNumber),
+					color: "#000",
+					weight: 1,
+					opacity: 1,
+					fillOpacity: 1
+				});
+			}
+
+			L.geoJson(coordinates, { onEachFeature: onEachFeature, pointToLayer: pointToLayer
+			}).addTo(mymap);
 		</script>
 	</body>
 </html>
