--- a/Sources/Map/index.html
+++ b/Sources/Map/index.html
@@ -6,71 +6,40 @@
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
 					integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
 					crossorigin=""/>
-		<link rel="stylesheet" href="theme.css"/>
+		<link rel="stylesheet" href="menu.css"/>
+		<link rel="stylesheet" href="map.css"/>
 		<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
 						integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
 						crossorigin=""></script>
+		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+		<script src="dropdown_menu.js"></script>
 	</head>
 	<body>
-		<div id="mapid"></div>
-		<script type="text/javascript" src="coordinates.js"></script>
-		<script>
-			var mymap = L.map('mapid').setView([0, 0], 2);
-			L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw',
-			{
-				id: 'mapbox.streets-basic',
-				minZoom: 2,
-				maxZoom: 4,
-			}).addTo(mymap);
-
-			function onEachFeature(feature, layer) {
-				if (feature.properties && feature.properties) {
-					layer.bindPopup("Langue : " + feature.properties.name + "<br> Consonant Inventory : " + feature.properties.description);
-				}
-			}
-
-			function getColor(d) {
-			    return d == 1  ? '#f1eef6' :
-			           d == 2  ? '#d0d1e6' :
-			           d == 3  ? '#a6bddb' :
-			           d == 4  ? '#74a9cf' :
-			           d == 5  ? '#2b8cbe' :
-								 					 '#045a8d'
-			}
-
-			function pointToLayer(feature, latlng) {
-				return L.circleMarker(latlng, {
-					radius: 6,
-					fillColor: getColor(feature.properties.valueNumber),
-					color: "#000",
-					weight: 1,
-					opacity: 1,
-					fillOpacity: 1
-				});
-			}
-
-			L.geoJson(coordinates, { onEachFeature: onEachFeature, pointToLayer: pointToLayer
-			}).addTo(mymap);
-
-			var legend = L.control({position: 'bottomright'});
-
-			legend.onAdd = function(mymap)
-			{
-    		var div = L.DomUtil.create('div', 'info legend'),
-        grades = [1, 2, 3, 4, 5]
-        labels = ["Small", "Moderatly small", "Average", "Moderately large", "Large"];
-
-    		// loop through our density intervals and generate a label with a colored square for each interval
-				div.innerHTML += "<h4>Consonant Inventory</h4>"
-    		for (var i = 0; i < grades.length; i++)
-				{
-        	div.innerHTML += '<i style="background:' + getColor(grades[i] + 1) + '"></i> ' +
-            								labels[i] + '<br>';
-    		}
-    		return div;
-			};
-
-			legend.addTo(mymap);
-		</script>
+		<nav id='cssmenu'>
+		<ul>
+		   <li><a href='index.html'>Accueil</a></li>
+		   <li class='active'><a href='#'>Cartes</a>
+		      <ul>
+		         <li><a href='#'>Phonologie</a>
+		            <ul>
+									<li><a href='consonnant_inventories.html'>Inventaire de consomnes</a></li>
+									<li><a href='vowel_inventories.html'>Inventaire de voyelles</a></li>
+									<li><a href='consonant-vowel_ratio.html'>Ratio entre consomnes et voyelles</a></li>
+		              <li><a href='tone.html'>Tons</a></li>
+		            </ul>
+		         </li>
+		         <li><a href='#'>Morphologie</a>
+		            <ul>
+		               <li><a href='#'>Inflectional Synthesis of the Verb</a></li>
+									 <li><a href='#'>Locus of Marking in the Clause</a></li>
+									 <li><a href='#'>Locus of Marking: Whole-language Typology</a></li>
+		               <li><a href='#'>Prefixing vs. Suffixing in Inflectional Morphology</a></li>
+		            </ul>
+		         </li>
+		      </ul>
+		   </li>
+			 <li><a href='biblio.html'>Bibliographie</a></li>
+		</ul>
+	</nav>
 	</body>
 </html>
