Ajout des maps voyelles et ratio

--- a/Sources/Map/consonant-vowel_ratio.html
+++ b/Sources/Map/consonant-vowel_ratio.html
@@ -42,7 +42,7 @@
 		</ul>
 	</nav>
 		<div id="mapid"></div>
-		<script type="text/javascript" src="coord_vowel.js"></script>
-		<script type="text/javascript" src="vowel_map.js"></script>
+		<script type="text/javascript" src="coord_ratio.js"></script>
+		<script type="text/javascript" src="ratio_map.js"></script>
 	</body>
 </html>
