Refactoring HTML part

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Accueil</title>
+		<title>Accueil - Projet UE10 Nana Pimmel Toure</title>
 		<meta charset="UTF-8">
+		<link rel="icon" href="Images/favicon.png">
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
 					integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
 					crossorigin=""/>
 		<link href='https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,400italic,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="menu.css"/>
-		<!--<link rel="stylesheet" href="map.css"/>-->
-		<link rel="stylesheet" href="article.css"/>
+		<link rel="stylesheet" href="CSS/menu.css"/>
+		<link rel="stylesheet" href="CSS/article.css"/>
+
 		<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
 						integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
 						crossorigin=""></script>
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script src="dropdown_menu.js"></script>
+		<script src="Scripts/dropdown_menu.js"></script>
 	</head>
 	<body>
 		<nav id='cssmenu'>
@@ -34,14 +35,14 @@
 			<h1>Phonologie</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar efficitur neque ullamcorper mollis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam faucibus urna et ultrices fermentum. Fusce ultricies auctor lectus vel venenatis. Vestibulum tincidunt sapien et odio porta ullamcorper. Integer interdum metus vitae urna hendrerit hendrerit sit amet eu nisi. Donec egestas elit erat, mollis suscipit neque mollis a. Integer vitae nulla vulputate, ornare odio eu, volutpat quam. Maecenas a lacus ligula. Vestibulum id gravida dolor. Aenean sapien libero, ultricies vel hendrerit id, congue sed turpis. Nulla vehicula venenatis est, et pharetra diam porttitor id. Phasellus mattis ante vitae est semper, viverra vestibulum justo volutpat. Integer pretium at eros non luctus. Aliquam sed ex a enim gravida placerat. Morbi molestie lorem vel iaculis auctor.</p>
 			<h2>Big-Section</h2>
-			<p>Nam ipsum velit, vehicula fermentum nisi non, convallis sagittis enim. Fusce vitae odio ex. Pellentesque tellus est, rutrum eget lacus vitae, aliquam molestie leo. Curabitur dignissim lectus dolor, in tincidunt sapien bibendum at. Duis ullamcorper massa nec est vehicula euismod. Duis eget lacus rhoncus sem scelerisque commodo dignissim ut dui. Vivamus pharetra non massa vitae ornare. Nam porttitor metus sed mi mollis ultricies. Vestibulum arcu ligula, volutpat nec gravida nec, molestie non elit. Donec convallis lobortis lectus, vel commodo eros pretium a. Sed sit amet lectus eros.</p>
+			<p>Nam ipsum velit, vehicula <a href="vowel_inventories.html">fermentum</a> nisi non, <a href="consonant_inventories.html">convallis sagittis enim</a>. Fusce vitae odio ex. Pellentesque tellus est, rutrum eget lacus vitae, aliquam molestie leo. Curabitur dignissim lectus dolor, in tincidunt sapien bibendum at. Duis ullamcorper massa nec est vehicula euismod. Duis eget lacus rhoncus sem scelerisque commodo dignissim ut dui. Vivamus pharetra non massa vitae ornare. Nam porttitor metus sed mi mollis ultricies. Vestibulum arcu ligula, volutpat nec gravida nec, molestie non elit. Donec convallis lobortis lectus, vel commodo eros pretium a. Sed sit amet lectus eros.</p>
 			<h3>Small-Section</h3>
 			<p>Morbi cursus elit a nisi aliquam ultricies. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam euismod euismod est sed pharetra. Vivamus a purus vitae lorem blandit congue nec vel ligula. Cras luctus ex velit, sed pulvinar est euismod at. Mauris eu mauris ex. Aliquam purus orci, lacinia a sapien accumsan, hendrerit interdum lectus. In ut ornare nulla, sed molestie lectus. Sed sagittis, magna sed varius fermentum, arcu libero accumsan elit, in porttitor quam sapien sed erat.</p>
-			<p class="figure"><img width="90%" src="../../Resultats/figure9.svg" alt="figure 9"/><br/>Figure 01</p>
+			<p class="figure"><img width="100%" src="../Resultats/figure9.svg" alt="figure 9"/><br/>Figure 01</p>
 			<p>Suspendisse vitae tellus vestibulum est ornare fermentum id et dolor. Nunc sit amet volutpat mi. Sed varius fringilla erat, sed faucibus orci facilisis eget. Suspendisse eu hendrerit libero. Sed quis ante ut dui vestibulum euismod. In vel ultrices elit, a rhoncus libero. Sed sed nibh diam. Nulla lectus nisl, dictum id tortor sit amet, tristique eleifend neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce non eros dui. Praesent rhoncus tortor a efficitur viverra. Vivamus metus arcu, hendrerit id mollis a, congue sit amet arcu. Fusce interdum tincidunt nisi. Morbi pellentesque at augue at pellentesque.</p>
 			<h2>Another section</h2>
 			<p>Vivamus tincidunt sed arcu ac euismod. Curabitur bibendum blandit malesuada. Donec odio nibh, aliquet vitae erat sed, posuere maximus ligula. Nunc nec suscipit tortor. Duis rhoncus velit a leo gravida sodales. Donec faucibus diam vitae justo mollis sollicitudin. Proin accumsan sem vel ante ultrices, eget varius augue mollis. Etiam eu magna est. Vivamus eros tortor, ullamcorper eu leo eget, vehicula lacinia tellus. Fusce nec accumsan purus, non consectetur nunc. Fusce id finibus justo. Duis ac blandit quam. Sed molestie urna id quam tempus placerat. Fusce maximus ac purus sit amet viverra. Sed tempor fermentum odio, at faucibus nisl. Vivamus faucibus dui ac libero egestas dictum.</p>
-			<p class="figure"><img width="90%" src="../../Resultats/figure32.svg"/><br />Figure 32</p>
+			<p class="figure"><img width="100%" src="../Resultats/figure32.svg"/><br />Figure 32</p>
 		</article>
 	</body>
 </html>
