--- a/HTML/consonnant_inventories.html
+++ b/HTML/consonnant_inventories.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>My map</title>
+		<title>Carte du monde interactive de l'inventaire de consones pour chaque langue - Projet UE10 Nana Pimmel Toure</title>
 		<meta charset="UTF-8">
+		<link rel="icon" href="Images/favicon.png">
+
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
 					integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
 					crossorigin=""/>
-		<link rel="stylesheet" href="menu.css"/>
-		<link rel="stylesheet" href="map.css"/>
+		<link rel="stylesheet" href="CSS/menu.css"/>
+		<link rel="stylesheet" href="CSS/map.css"/>
 		<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
 						integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
 						crossorigin=""></script>
 		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script src="dropdown_menu.js"></script>
+		<script src="Scripts/dropdown_menu.js"></script>
 	</head>
 	<body>
 		<nav id='cssmenu'>
@@ -29,7 +31,7 @@
 			</ul>
 		</nav>
 		<div id="mapid"></div>
-		<script type="text/javascript" src="coord_vowel.js"></script>
-		<script type="text/javascript" src="vowel_map.js"></script>
+		<script type="text/javascript" src="Scripts/coord_consonant.js"></script>
+		<script type="text/javascript" src="Scripts/consonant_map.js"></script>
 	</body>
 </html>
